# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  engine.c  engine.h  file.c  file.h  main.c  main.h
